# philosophers_experiements

philosophers/: .gitignore
philosophers/.svn/: all-wcprops  entries
philosophers/.svn/text-base/: 1.png.svn-base  10.png.svn-base  11.png.svn-base  12.png.svn-base  13.png.svn-base  14.png.svn-base  15.png.svn-base  16.png.svn-base  17.png.svn-base  18.png.svn-base  19.png.svn-base  2.png.svn-base  20.png.svn-base  21.png.svn-base  3.png.svn-base  4.png.svn-base  5.png.svn-base  6.png.svn-base  7.png.svn-base  8.png.svn-base  9.png.svn-base  normal.png.svn-base
philosophers/devel/: .catkin  .rosinstall  setup.sh
philosophers/devel/.svn/: entries
philosophers/devel/etc/.svn/: entries
philosophers/devel/include/.svn/: entries
philosophers/devel/include/dining_philosopher_communications/: hungerMsg.h
philosophers/devel/include/remote_counter/: countingSrv.h  countingSrvRequest.h  countingSrvResponse.h
philosophers/devel/include/remote_mutex/: mutexSrv.h  mutexSrvRequest.h  mutexSrvResponse.h
philosophers/devel/include/state_manager_communications/: registerNodeSrv.h  registerNodeSrvRequest.h  registerNodeSrvResponse.h  robotModeMsg.h
philosophers/devel/include/watchdog_timer/: watchdogResetMsg.h  watchdogSrv.h  watchdogSrvRequest.h  watchdogSrvResponse.h  wdtTimeoutNotificationMsg.h
philosophers/src/.svn/: all-wcprops  entries
philosophers/src/anomaly_detection/: CMakeLists.txt  package.xml
philosophers/src/dining_philosopher/: CMakeLists.txt
philosophers/src/dining_philosopher/.svn/: all-wcprops  entries
philosophers/src/dining_philosopher/.svn/text-base/: CMakeLists.txt.svn-base  mainpage.dox.svn-base  package.xml.svn-base
philosophers/src/dining_philosopher/.svn/tmp/text-base/: package.xml.svn-base
philosophers/src/dining_philosopher/include/.svn/: all-wcprops  entries
philosophers/src/dining_philosopher/include/dining_philosopher/: PhilosopherStats.h  WatchedPhilosopher.h
philosophers/src/dining_philosopher/include/dining_philosopher/.svn/: all-wcprops  entries
philosophers/src/dining_philosopher/include/dining_philosopher/.svn/text-base/: MonitoredPhilosopher.h.svn-base  Philosopher.h.svn-base
philosophers/src/dining_philosopher/include/dining_philosopher/.svn/tmp/text-base/: Philosopher.h.svn-base
philosophers/src/dining_philosopher/launch/: custom_launch.launch  exp1L1_constant.launch  exp1L3.launch  exp1params.launch  exp2L1.launch  nodes.launch  params.launch  params2.launch  ten_monitoredPhilosophers.launch  two_philosophers.launch
philosophers/src/dining_philosopher/launch/.svn/: all-wcprops  entries
philosophers/src/dining_philosopher/launch/.svn/text-base/: 50_philosophers.launch.svn-base  exp1L1.launch.svn-base  exp1L4.launch.svn-base  exp1params.launch.svn-base  exp2L3.launch.svn-base  exp2L4.launch.svn-base  exp2params.launch.svn-base  launchCreator.sh.svn-base  ten_philosophers.launch.svn-base
philosophers/src/dining_philosopher/launch/.svn/tmp/text-base/: 49normal.launch.svn-base  exp1L1.launch.svn-base
philosophers/src/dining_philosopher/launch/mikes/.svn/: entries
philosophers/src/dining_philosopher/lib/.svn/: all-wcprops  entries
philosophers/src/dining_philosopher/src/: MonitoredPhilosopher-main.cc  MonitoredPhilosopher.cc  Philosopher.cc  PhilosopherStats-main.cc  WatchedPhilosopher-main.cc
philosophers/src/dining_philosopher/src/.svn/: all-wcprops  entries
philosophers/src/dining_philosopher/src/.svn/text-base/: Philosopher-main.cc.svn-base  PhilosopherStats.cc.svn-base  WatchedPhilosopher.cc.svn-base
philosophers/src/dining_philosopher/src/faulty_philosophers/.svn/: entries
philosophers/src/dining_philosopher/src/faulty_philosophers/.svn/tmp/text-base/: ConstantPhilosopher.cc.svn-base  EatingHungringRatesPhilosopher.cc.svn-base  FaultyPhilosopher.cc.svn-base
philosophers/src/erratic_state_changer/: CMakeLists.txt  mainpage.dox
philosophers/src/erratic_state_changer/.svn/: all-wcprops  entries
philosophers/src/erratic_state_changer/include/.svn/: all-wcprops  entries
philosophers/src/erratic_state_changer/include/erratic_state_changer/: ErraticStateChanger.h
philosophers/src/erratic_state_changer/include/erratic_state_changer/.svn/: all-wcprops  entries
philosophers/src/erratic_state_changer/lib/.svn/: all-wcprops  entries
philosophers/src/erratic_state_changer/src/.svn/: all-wcprops  entries
philosophers/src/erratic_state_changer/src/.svn/text-base/: ErraticStateChanger-main.cc.svn-base  ErraticStateChanger.cc.svn-base
philosophers/src/philosophers/: CMakeLists.txt
philosophers/src/remote_counter/: mainpage.dox
philosophers/src/state_manager/: package.xml
philosophers/src/state_manager/.svn/: all-wcprops  entries
philosophers/src/state_manager/.svn/text-base/: CMakeLists.txt.svn-base  mainpage.dox.svn-base
philosophers/src/state_manager/include/.svn/: all-wcprops  entries
philosophers/src/state_manager/include/state_manager/: StateClient.h  StateServer.h
philosophers/src/state_manager/include/state_manager/.svn/: all-wcprops  entries
philosophers/src/state_manager/launch/: stateManager.launch
philosophers/src/state_manager/launch/.svn/: all-wcprops  entries
philosophers/src/state_manager/lib/.svn/: all-wcprops  entries
philosophers/src/state_manager/src/: StateClient.cpp
philosophers/src/state_manager/src/.svn/: all-wcprops  entries
philosophers/src/state_manager/src/.svn/text-base/: StateChanger.cpp.svn-base  StateClient.cpp.svn-base  StateServer.cpp.svn-base
(+415 files in other folders)
