<package>
  <name>state_manager</name>
  <version>1.0.0</version>
  <description>
     A simple State Manager
  </description>
  <author>Allamanis Miltiadis, Marina Stamatiadou</author>
<maintainer email="afourast@gmail.com">Afouras Triantafyllos</maintainer> 
  <license>MIT</license>
  <url>http://ros.org/wiki/stateManager</url>

<buildtool_depend>catkin</buildtool_depend>
  
  
  <build_depend>roscpp</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>state_manager_communications</build_depend>
  <build_depend>std_msgs</build_depend>  

  <run_depend>roscpp</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>state_manager_communications</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>

</package>


